{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "1682306b-3366-46f5-aac0-469b4513f2b3",
            "actions": [
                {
                    "name": "Press",
                    "type": "Button",
                    "id": "3422efd8-9f05-470a-8e59-cbe36c8a98cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "4eebb3a1-78ef-4563-b22f-25dacb067ac2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0e185f4d-d04a-4378-8006-9a72b7d29745",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "100314fb-a2d8-4bdb-9e7e-abd5fb54e2f1",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f357294f-4382-4841-b697-bb528150a0e3",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}